
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSail"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/imgSail"
            android:src="@drawable/sail" />

        <TableLayout
            android:layout_width="674dp"
            android:layout_height="341dp">

            <TableRow android:layout_width="wrap_content">

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="141dp"
                    android:layout_height="match_parent"
                    android:background="@color/teal_200"
                    android:gravity="fill_horizontal"
                    android:padding="50dp"
                    android:text="@string/txtTitle"
                    android:textSize="14sp"
                    android:typeface="serif" />
            </TableRow>

            <TableRow>

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:padding="20dp"
                    android:text="@string/TextDescription"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <View android:layout_height="80dp" />

                <Button
                    android:id="@+id/bttnDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/bttnDate"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="148dp">

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/txtReservation"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>






